Added element extraction so we can associate operations with the message elements. This includes matching complex types that were previously extracted onto these elements to reduce duplication.

--- a/CSGeneration/CSGeneration.csproj
+++ b/CSGeneration/CSGeneration.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DataContractWriter.cs" />
     <Compile Include="DebugUtility.cs" />
     <Compile Include="MemberDescription.cs" />
+    <Compile Include="NamespaceUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceGenerator.cs" />
     <Compile Include="ServiceWriter.cs" />
