--- a/CSGeneration/CSGeneration.csproj
+++ b/CSGeneration/CSGeneration.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentDescription.cs" />
     <Compile Include="AttributeDescription.cs" />
     <Compile Include="ComplexType.cs" />
     <Compile Include="CSTemplate.cs" />
