--- a/WsdlGenerator/WsdlGenerator.csproj
+++ b/WsdlGenerator/WsdlGenerator.csproj
@@ -70,6 +70,9 @@
       <DependentUpon>CustomServiceReferenceGenerator.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service1Client.generated.cs">
+      <DependentUpon>CustomServiceReferenceGenerator.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="attribute.tt">
