Fixed the wsdl generation so we don't rely on single page wsdl. Imports now work correctly

--- a/CSGeneration/CSGeneration.csproj
+++ b/CSGeneration/CSGeneration.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="ArgumentDescription.cs" />
     <Compile Include="AttributeDescription.cs" />
+    <Compile Include="Attributes.cs" />
     <Compile Include="ComplexType.cs" />
     <Compile Include="CSTemplate.cs" />
     <Compile Include="DataContractWriter.cs" />
